# langclaw

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  RELEASE.md  pyproject.toml
.claude/: launch.json
.github/workflows/: auto-tag-release.yml  ci.yml
.interface-design/: system.md
docs/: ARCHITECTURE.md
examples/: echo_bot.py  gmail_assistant.py  knowledge_base_bot.py  nobel_assistant.py  openclaw_qa.py  research_assistant.py  websocket_guard.py
examples/rentagent_vn/: .gitignore  app.py  callbacks.py  context.py  outreach.py  prompts.py  run_all.py  tools.py  trace.py
examples/rentagent_vn/api/: brokers.py
examples/rentagent_vn/api/routes/: campaigns.py  research.py  zalo.py
examples/rentagent_vn/docs/: PRD-05-mobile-ux-refactor.md  PRD-07-settings-page.md  redesign-concept.html
examples/rentagent_vn/frontend/src/app/: globals.css  layout.tsx  page.tsx
examples/rentagent_vn/frontend/src/components/app/: app.tsx
examples/rentagent_vn/frontend/src/components/dashboard/: outreach-dialog.tsx  pipeline-column.tsx  pipeline.tsx  research-results.tsx  top-bar.tsx
examples/rentagent_vn/frontend/src/components/discover/: action-bar.tsx  card-stack.tsx  discover-screen.tsx  empty-discover.tsx  rental-card.tsx  scan-live-sheet.tsx
examples/rentagent_vn/frontend/src/components/listing/: index.ts  listing-detail-sheet.tsx
examples/rentagent_vn/frontend/src/components/settings/: about-section.tsx  channels-section.tsx  connections-section.tsx  index.ts  notifications-section.tsx  outreach-section.tsx  schedule-section.tsx  search-preferences-card.tsx  search-preferences-sheet.tsx  search-query-card.tsx  settings-screen.tsx  sources-card.tsx  sources-sheet.tsx  zalo-settings-sheet.tsx
examples/rentagent_vn/frontend/src/components/setup/: chat-step.tsx  confirm-step.tsx  frequency-step.tsx  setup-wizard.tsx  sources-step.tsx
examples/rentagent_vn/frontend/src/components/shared/: bottom-sheet.tsx  campaign-actions.tsx  campaign-dropdown.tsx  campaign-pill.tsx  index.ts  preference-tags.tsx  settings-toggle.tsx  source-card.tsx
examples/rentagent_vn/frontend/src/components/track/: research-live-sheet.tsx  track-card.tsx  track-screen.tsx  track-section.tsx
examples/rentagent_vn/frontend/src/components/ui/: bottom-sheet.tsx
examples/rentagent_vn/frontend/src/components/zalo/: zalo-settings-dialog.tsx
examples/rentagent_vn/frontend/src/hooks/: use-campaign.ts
examples/rentagent_vn/frontend/src/lib/: api.ts
examples/rentagent_vn/frontend/src/stores/: research-store.ts  scan-stream-store.ts  zalo-store.ts
examples/rentagent_vn/frontend/src/types/: index.ts
examples/rentagent_vn/runners/: callbacks.py  research.py  scrape.py
examples/rentagent_vn/tinyfish/: client.py
langclaw/: __init__.py  app.py
langclaw/agents/: builder.py
langclaw/agents/defaults/: AGENTS.md
langclaw/agents/tools/: cron.py  fs.py
langclaw/bus/: __init__.py  base.py
langclaw/cli/: app.py
langclaw/config/: __init__.py  schema.py
langclaw/cron/: scheduler.py  utils.py
langclaw/gateway/: base.py  commands.py  discord.py  manager.py  matrix.py  slack.py  telegram.py  utils.py  websocket.py
langclaw/gateway/discord/: __init__.py  channel.py
langclaw/gateway/telegram/: channel.py
langclaw/middleware/: __init__.py  permissions.py
langclaw/session/: manager.py
langclaw/tools/: __init__.py  memory.py
tests/: test_agents_md_hot_reload.py  test_attachments.py  test_config.py  test_gateway.py  test_matrix_channel.py  test_slack_channel_functionality.py  test_subagents.py
